# fast-face-sdk

./: .gitignore  CMakeLists.txt  LICENSE_GUIDE.md  PROJECT_FILES.md  QUICK_START.md  README.md  SDK_COMPLETION_SUMMARY.md  USER_GUIDE.md  build.bat  build.sh  build_unix.sh  install.bat  install.sh  license_manager.cpp  show_key.bat  show_key.cpp  test_license.cpp  test_sdk.cpp
cmake/: FastFaceSDKConfig.cmake.in
example/: main.cpp
include/: fast_face_config.h  fast_face_sdk.h
src/: CMakeLists.txt  fast_face_sdk.cpp
